# Brakenator

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  auto_install.bat  build - Shortcut.lnk  conanfile.txt  install-deps-unix.sh  install-deps-windows.bat  vcpkg.json  weather_key.txt
BNBackend/: BNBackend.vcxproj  BNBackend.vcxproj.filters
BNBackend/x64/Debug/: BNBackend.dll.recipe  BNBackend.ilk  vc143.idb
BNBackend/x64/Debug/BNBackend.tlog/: BNBackend.lastbuildstate  BNBackend.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Brakenator/: Brakenator.sln
Brakenator/Brakenator/: Brakenator.csproj  MainWindow.xaml  MainWindow.xaml.cs  Page2.xaml.cs
Brakenator/x64/Debug/: BNBackend.exp  BNBackend.lib
BrakenatorTEST/: CMakeLists.txt
BrakenatorTEST/src/: main.cpp
BrakenatorUI/: App.xaml  App.xaml.cs  Brakenator.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs  Page1.xaml  Page1.xaml.cs  Page2.xaml  Page2.xaml.cs  PageMap.xaml  PageMap.xaml.cs
BrakenatorUI/resources/: arrow.xaml
include/: Brakenator.h
ref/html/: _brakenator_8cpp.html  _brakenator_8cpp.js  _brakenator_8cpp_8o_8d.html  _brakenator_8h.html  _brakenator_8h.js  _brakenator_8h_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_brakenator_1_1_app.html  class_brakenator_1_1_b_n-members.html  class_brakenator_1_1_b_n.html  class_brakenator_1_1_b_n.js  class_brakenator_1_1_main_window-members.html  class_brakenator_1_1_main_window.html  class_brakenator_1_1_main_window.js  class_brakenator_1_1_page1-members.html  class_brakenator_1_1_page1.html  class_brakenator_1_1_page2-members.html  class_brakenator_1_1_page2.html  classes.html  dir_05300b19a394a17860c2ac1d5f54bd45.html  dir_310e7a2a06eaff4e006233eab9c7fed3.html  dir_310e7a2a06eaff4e006233eab9c7fed3.js  dir_47e3a9897695200b9cdda333cc31187d.html  dir_47e3a9897695200b9cdda333cc31187d.js  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_4fef79e7177ba769987a8da36c892c5f.js  dir_58c1e01eb2461dc11e971f9a4dcbbdbd.html  dir_58c1e01eb2461dc11e971f9a4dcbbdbd.js  dir_60a3479f8c52bf536ffd5488aa63a8a0.html  dir_60a3479f8c52bf536ffd5488aa63a8a0.js  dir_63772b626f2709090f0bdca0f40827b4.html  dir_63772b626f2709090f0bdca0f40827b4.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7244560a089561a0e12534c279b923c3.html  dir_7244560a089561a0e12534c279b923c3.js  dir_7dabd7ab95737f4cdd27b16be7b9d72f.html  (+46 more)
ref/html/search/: all_1.js  all_4.js  all_5.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js
src/: Brakenator.cpp
src/Backend/: main.cpp  main.h
